api/tests/integration/snapshots/r#mod__integration__destinations_pipelines_test__an_existing_destination_and_pipeline_can_be_updated-2.snap
---
source: api/tests/integration/destinations_pipelines_test.rs
expression: response.config
---
PipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_size: 2000,
            max_fill_ms: 10,
        },
    ),
    apply_worker_init_retry: Some(
        RetryConfig {
            max_attempts: 10,
            initial_delay_ms: 2000,
            max_delay_ms: 4000,
            backoff_factor: 1.0,
        },
    ),
    max_table_sync_workers: Some(
        4,
    ),
}
