api/tests/integration/snapshots/r#mod__integration__destinations_pipelines_test__an_existing_destination_and_pipeline_can_be_updated.snap
---
source: api/tests/integration/destinations_pipelines_test.rs
expression: response.config
---
BigQuery {
    project_id: "project-id-updated",
    dataset_id: "dataset-id-updated",
    service_account_key: SerializableSecretString(
        "[REDACTED]",
    ),
    max_staleness_mins: Some(
        10,
    ),
}
