api/tests/integration/snapshots/r#mod__integration__destinations_pipelines_test__destination_and_pipeline_can_be_created.snap
---
source: api/tests/integration/destinations_pipelines_test.rs
expression: response.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        "[REDACTED]",
    ),
    max_staleness_mins: None,
}
